Fix resource list visibility

--- a/applications/osb-portal/src/css/main.less
+++ b/applications/osb-portal/src/css/main.less
@@ -43,7 +43,7 @@
     &:hover{
       visibility: visible;
     }
-    > div {
+    > * {
       visibility: visible;
     }
     .scrollbarStyle;
